manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interviewdeck
  labels:
    name: interviewdeck
