manifests/frontend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: interviewdeck-frontend-lb
  namespace: interviewdeck
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: interviewdeck-frontend
    app.kubernetes.io/instance: interviewdeck-frontend
