manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interviewdeck-ingress
  namespace: interviewdeck
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:276824024738:certificate/03d76270-6adb-4647-a2b4-daa0edad3f4a"
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
  - host: interviewdeck.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: interviewdeck-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: interviewdeck-frontend
            port:
              number: 80
  - host: www.interviewdeck.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: interviewdeck-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: interviewdeck-frontend
            port:
              number: 80
